Set theme jekyll-theme-leap-day

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-leap-day
+title: gukz's blog
 SEOTitle: gukz | github博客 | python
 url: "https://gukz.xyz"
